--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
   "rewrites": [
+    { "source": "/watchlist", "destination": "/index.html" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "routes": [
-    {
-      "src": "/[^.]+",
-      "dest": "/",
-      "status": 200
-    }
+    { "handle": "filesystem" },
+    { "src": "/watchlist", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
