--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
   "rewrites": [
-    { "source": "/watchlist", "destination": "/index.html" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { 
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/watchlist", "dest": "/index.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=1, stale-while-revalidate"
+        }
+      ]
+    }
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
